--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ deploy {
             targets << "roborio"
             directory = '/home/lvuser/deploy'
         }
+        // Built in artifact to deploy path files to the roboRIO.
+        fileTreeArtifact('frcStaticFileDeploy') {
+            // The directory below is the local directory to deploy
+            files = fileTree(dir: 'PathWeaver/output')
+            // Deploy to RoboRIO target, into /home/lvuser/deploy
+            targets << "roborio"
+            directory = '/home/lvuser/deploy/paths'
+        }*/
     }
 }
 
