Vision double angle correction + legit GYRO PID tuning w/ Zieger Nichols + VIsionFixCommand Testing Complete

--- a/vision_external/jevois/Vision2019/script.cfg
+++ b/vision_external/jevois/Vision2019/script.cfg
@@ -12,7 +12,7 @@ setcam bluebal 0
 # Send info log messages to None, Hard, or USB serial port - useful for debugging:
 #setpar serlog None
 #setpar serlog Hard
-setpar serlog USB
+setpar serlog None
 
 # Send serial strings with detected objects to None, Hard, or USB serial port:
 #setpar serout None
