vision + splines galore. CODE BUILDS, BUT NOT TESTED ON ROBOT.

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ repositories {
 dependencies {
     compile wpi.deps.wpilib()
     compile wpi.deps.vendor.java()
+    compile group: 'de.erichseifert.gral', name: 'gral-core', version: '0.11'
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
     testCompile 'junit:junit:4.12'
