--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "CodeLens (Launch) - PurePursuitVisualization",
+      "request": "launch",
+      "mainClass": "com.team649.PurePursuitVisualization",
+      "projectName": "Nigiri2019"
+    },
+    {
+      "type": "java",
       "name": "CodeLens (Launch) - FishyPathCreator",
       "request": "launch",
       "mainClass": "com.team319x649.FishyPathCreator",
